--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "license": "MPL-2.0",
+  "private": true,
   "homepage": "https://github.com/ribborges/product-review-api#readme",
   "bugs": {
     "url": "https://github.com/ribborges/product-review-api/issues"
