--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "url": "https://richardborges.dev"
   },
   "scripts": {
-    "dev": "tsx watch --env-file .env src/server.ts",
+    "dev": "tsx watch --env-file .env src/index.ts",
     "build": "tsup src --format esm",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
