--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "lodash-es": "^4.17.21",
     "mongodb": "^6.16.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.15.21",
     "tsup": "^8.5.0",
     "tsx": "^4.19.4",
